@@ -182,16 +182,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Timer
 import|;
 end_import
@@ -253,20 +243,6 @@ operator|.
 name|fs
 operator|.
 name|CommonConfigurationKeysPublic
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|io
-operator|.
-name|DataInputBuffer
 import|;
 end_import
 
@@ -2521,14 +2497,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-specifier|final
-name|Configuration
-name|conf
-init|=
-operator|new
-name|Configuration
-argument_list|()
-decl_stmt|;
 name|conf
 operator|.
 name|set
